app/src/main/java/com/example/filmatory/errors/Api404Error.kt
package com.example.filmatory.errors

class Api404Error(name: String) : BaseError(name) {
}